# chat

./: .env  .gitignore  Cargo.toml  README.md  _typos.toml  cliff.toml
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
chat_server/: .env  Cargo.toml  chat.yaml  http.rest
chat_server/examples/: .env  argon2.rs  axum_test.rs  jwt.rs  serde.rs  sqlx.rs  sqlx_test_db.rs  sse.rs  sse_client.rs  test.rs  uuid.rs
chat_server/src/: app_state.rs  config.rs  error.rs  jwt.rs  lib.rs  main.rs
chat_server/src/handlers/: auth.rs  chat.rs  message.rs  mod.rs
chat_server/src/handlers/model/: file.rs  mod.rs
chat_server/src/middlewares/: auth.rs  chat.rs  mod.rs  request_id.rs  server_time.rs
chat_server/src/services/: chat.rs  message.rs  mod.rs  user.rs  workspace.rs
docs/: db.excalidraw  handler.excalidraw
migrations/: 20240605042006_init.sql
notify_server/: Cargo.toml  http.rest
notify_server/examples/: .env  reqwest_eventsource.rs  sqlx.rs  sse_client.rs  sse_server.rs  sse_server_broadcast.rs  sse_server_mpsc.rs  ws.rs
