[package]
name = "chat_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
axum = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
futures-util = "0.3.30"
http-body-util = "0.1.2"
hyper = "1.3.1"
jwt-simple = "0.12.9"
nanoid = "0.4.0"
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.2", features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1.8.0", features = ["v7", "v8"] }

[dev-dependencies]
sqlx-db-tester = { workspace = true }
