[package]
name = "chat_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
axum = { workspace = true, features = ["multipart"] }
axum-auth = "0.7.0"
axum-extra = "0.9.3"
chrono = { workspace = true }
dotenv = { workspace = true }
futures-util = "0.3.30"
hex = "0.4.3"
http-body-util = "0.1.2"
hyper = "1.3.1"
jwt-simple = "0.12.9"
mime_guess = "2.0.4"
nanoid = "0.4.0"
reqwest = "0.12.5"
serde = { workspace = true }
serde_json = "1.0.118"
serde_yaml = { workspace = true }
sha1 = "0.10.6"
sqlx = { workspace = true }
sse-client = "1.1.1"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1.15"
tokio-util = "0.7.11"
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.2", features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1.8.0", features = ["v7", "v8"] }

[dev-dependencies]
sqlx-db-tester = { workspace = true }
