[package]
name = "notify_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, features = ["macros", "ws"] }
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
dotenv = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
sse-client = "1.1.1"
tokio-stream = { version = "0.1.15", features = ["sync"] }
tokio-util = "0.7.11"
async-stream = "0.3.5"
futures-util = "0.3.30"
dashmap = "6.0.1"
nanoid = "0.4.0"
chrono.workspace = true
reqwest-eventsource = "0.6.0"
tower = "0.4.13"
hyper = { version = "1.3.1", features = ["server"] }
tower-http = "0.5.2"


[dev-dependencies]
sqlx-db-tester = { workspace = true }
